--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {text-align: center;}
 .inside {display: inline-block;
           width: 300px;
           height: 300px;
-          background-color: black;}
-article h3 {background-color: yellow;}
+          background-color: #AE642D;}
 
 header h1 {background-color: grey;}
 
@@ -17,5 +16,15 @@ li {margin-top: 20px;}
 img {width: 150px;
      height: 150px;}
 
+.inline {width: 270px;
+	     height: 26px;
+	     background-color: yellow;
+         padding-right: 30px;
+         font-size: 15px;}
 
+.outside {width: 30px;
+          height: 30PX;
+          float: left;
+           padding-top: 12px;
+           padding-left: 30px;}
 
