--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ header h1 {background-color: grey;}
 
 section h2 {background-color: green;}
 
-div {background-color: grey;}
+.outdor {background-color: #34C924;
+     height: 20px;
+     width: 100px;}
 
-li {margin-top: 20px;}
+li {margin-top: 30px;}
 
 img {width: 150px;
      height: 150px;}
@@ -20,7 +22,7 @@ img {width: 150px;
 	     height: 26px;
 	     background-color: yellow;
          padding-right: 30px;
-         font-size: 15px;}
+         font-size: 15px;} 
 
 .outside {width: 30px;
           height: 30PX;
@@ -28,3 +30,6 @@ img {width: 150px;
            padding-top: 12px;
            padding-left: 30px;}
 
+div {border: 2px solid red;
+     border-radius: 5px;
+     box-shadow: 0px 0px 5px blue;}
