--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ img {width: 150px;
      height: 150px;}
 
 .inline {width: 320px;
-	     height: 26px;
+	     height: 30px;
 	     background-color: yellow;
          padding-right: 30px;
          font-size: 15px;} 
@@ -39,9 +39,12 @@ img {width: 150px;
 .outside {width: 30px;
           height: 30PX;
           float: left;
-           padding-top: 12px;
+           padding-top: 15px;
            padding-left: 30px;}
 
 div {border: 2px solid red;
      border-radius: 5px;
      box-shadow: 0px 0px 5px blue;}
+
+.azert {height: 40px;
+        width: 40px;}     
