--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {text-align: center;
-      background-image:url(octofd.jpg);
+      background-image:url(./img/octofd.jpg);
        background-size: 100% 100%;
        background-repeat:no-repeat;
        background-attachment:fixed;}
