--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {text-align: center;
        background-repeat:no-repeat;
        background-attachment:fixed;}
 
-
+       /*--- Article---*/
 .inside {display: inline-block;
           width: 350px;
           height: 300px;
@@ -18,16 +18,19 @@ header h1 {background-color: #0F056B;
           border-radius: 7px;
           color: #0131B4;}
 
+      /*----h2----*/
 .aze {background-color: #6600FF;
       border:4px solid #0131B4;
       border-radius: 20px;
       color: #0F056B;
       text-shadow: 2px 2px black;}
 
+       /*----div----*/
 .outdor {background-color: #34C924;
      height: 20px;
      width: 100px;}
 
+       /*----div liste----*/
 .indor {background-color: red;
      height: 20px;
      width: 100px;}
@@ -37,6 +40,7 @@ li {margin-top: 30px;
     text-align: left;
     text-decoration: line-through;}
 
+         /*----li----*/
 .inset {margin-top: 30px;
     width: 300px;
     text-align: left;
@@ -45,6 +49,7 @@ li {margin-top: 30px;
 img {width: 0px;
      height: 0px;}
 
+       /*---h3---*/
 .inline {width: 320px;
 	     height: 30px;
 	     background-color: #723E64;
@@ -55,6 +60,7 @@ img {width: 0px;
           text-shadow: 2px 2px blue;} 
          
 
+         /*----img----*/
 .outside {width: 30px;
           height: 30PX;
           float: left;
@@ -65,6 +71,7 @@ div {border: 2px solid red;
      border-radius: 5px;
      box-shadow: 0px 0px 5px blue;}
 
+        /*---img gmail,twitter---*/
 .azert {height: 40px;
         width: 40px;}     
 
