--- a/style.css
+++ b/style.css
@@ -23,24 +23,32 @@ header h1 {background-color: #0F056B;
       border:4px solid #0131B4;
       border-radius: 20px;
       color: #0F056B;
-      text-shadow: 2px 2px black;}
+      text-shadow: 2px 2px black;
+       opacity: 0.7;}
 
        /*----div----*/
 .outdor {background-color: #34C924;
      height: 20px;
-     width: 100px;}
+     width: 100px;
+      margin-left: 10px;}
 
        /*----div liste----*/
 .indor {background-color: red;
      height: 20px;
-     width: 100px;}
+     width: 100px;
+      margin-left:10px;}
 
 li {margin-top: 30px;
     width: 300px;
     text-align: left;
     text-decoration: line-through;}
 
-         /*----li----*/
+         
+li:hover {color: white;
+          text-decoration: none;
+          font-weight: bold; }
+
+        /*----li----*/
 .inset {margin-top: 30px;
     width: 300px;
     text-align: left;
@@ -60,7 +68,7 @@ img {width: 0px;
           text-shadow: 2px 2px blue;} 
          
 
-         /*----img----*/
+         /*----img(icon)----*/
 .outside {width: 30px;
           height: 30PX;
           float: left;
